src/Style/Style.sass
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Special+Elite&display=swap')
  
// VARIABLES
$bp-mobile: 480px
$bp-tablet: 800px

$font-main: 'Fira Sans', sans-serif
$font-header: 'Special Elite', cursive

$color-font: rgb(240, 240, 240)
$color-theme: rgb(39, 51, 107)
$color-theme-trans: rgba(39, 51, 107, 0.75)
$color-theme-trans-light: rgba(39, 51, 107, 0.25)
  
  
*
    box-sizing: border-box

.App
    width: 100vw
    min-height: 120vh
    background-image: linear-gradient($color-theme-trans-light, $color-theme-trans-light), url('../Media/Nupar.jpg')
    background-repeat: no-repeat
    object-fit: contain
    min-height: 120vh
    background-origin: border-box
    background-attachment: fixed
    background-size: cover
    -webkit-background-size: cover
    -moz-background-size: cover
    -o-background-size: cover
    background-position-x: 64.5% 
    background-position-y: 70%

body 
  text-align: center
  color: $color-font
  // background-image: linear-gradient($color-theme-trans-light, $color-theme-trans-light), url('../Media/Nupar.jpg')
  // background-repeat: no-repeat
  // object-fit: contain
  // min-height: 120vh
  // background-origin: border-box
  // background-attachment: fixed
  // background-size: cover
  // -webkit-background-size: cover
  // -moz-background-size: cover
  // -o-background-size: cover
  // background-position-x: 64.5% 
  // background-position-y: 70%




@import header

@import hero

@import work

@import workdisplay

@import imageslider

@import clickthrough

@import about

@import contact

@import footer

